--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,8 @@ body { margin: 0; font-family: 'Roboto', sans-serif; }
     align-items: center;
     justify-content: center;
 }
+.alignMiddleLeft{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
